[package]
name = "mesa"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bollard]
version = "0.10.1"

[dependencies.clap]
version = "2.33.3"
default-features = false

[dependencies.futures]
version = "0.3.15"

[dependencies.handlebars]
version = "4.0.1"
default-features = false

[dependencies.semver]
version = "1.0.3"
default-features = false
features = []

[dependencies.serde]
version = "1.0.126"
default-features = false
features = [ "derive" ]

[dependencies.serde_json]
version = "1.0.64"
default-features = false
features = [ "std" ]

[dependencies.tar]
version = "0.4.35"

[dependencies.tokio]
version = "1.7.0"
default-features = false
features = [ "full" ]

[dependencies.toml]
version = "0.5.8"
