[package]
name = "mesa_strata"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bollard]
version = "0.9.0"

[dependencies.futures]
version = "0.3.9"

[dependencies.handlebars]
version = "3.5.2"
default-features = false
features = [ "dir_source" ]

[dependencies.serde_json]
version = "1.0.61"
default-features = false
features = [ "std" ]

[dependencies.tar]
version = "0.4.30"
