[package]
name = "hello_world"
version = "0.1.0"
authors = ["Davis Van Sant <davisvansant@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime", branch = "master" }
tokio = { version = "0.2.24", features = ["full"] }
serde_json = "1.0.39"
serde = "1.0.118"
serde_derive = "1.0.118"

[workspace]
